--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -150,18 +150,6 @@ main {
     margin: .5rem;
 }
 
-.join-link {
-    background-color: #0d3e5f;
-    color: #fff;
-    padding: 5px;
-    border-radius: 5px;
-    border-style: solid;
-    border-color: #f1cf25;
-    text-decoration: none;
-    max-width: 200px;
-    text-align: center;
-}
-
 
 } 
 
